<resources>
    <string name="app_name">Quizap!</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="title_activity_testing2">testing2</string>
    <string name="select_level">Select Level</string>

    <string name="title_activity_quiz_levels">QuizLevels</string>
    <string name="literature">Literature</string>
    <string name="world_history">World History</string>
    <string name="math">Math</string>
    <string name="geography">Geography</string>
    <string name="botany">Botany</string>
    <string name="zoology">Zoology</string>
    <string name="programming">Programming</string>
    <string name="grade_school">Grade School</string>
    <string name="high_school">High School</string>
    <string name="college">College</string>
    <string name="title_activity_hamburger_activity">Hamburger_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="score">Score:</string>
    <string name="quizap">Quizap!</string>
    <string name="title_activity_botany">activity_botany</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn">B</string>
    <string name="close">Close</string>
    <string name="help">HELP</string>
    <string name="help_2">Help</string>
    <string name="ok">OK</string>
    <string name="pciture">Picture1</string>
    <string name="guest">Guest</string>
    <string name="account">Account</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="photo">photo</string>
    <string name="points">Points :</string>
    <string name="buttonA">ButtonA</string>
    <string name="buttonB">ButtonB</string>
    <string name="buttonC">ButtonC</string>
    <string name="buttonD">ButtonD</string>
    <string name="questionsText">questionsText</string>
    <string name="score0">0</string>
    <string name="congrats">Congrats!</string>
    <string name="resultSucess">Quiz completed successfully!</string>
    <string name="resulttext">resultText</string>
    <string name="continueBtn">Continue</string>
    <string name="check_nanswers">Check \nAnswers</string>
    <string name="_100_score">100% Score</string>
    <string name="text1234">You attempt 60 questions and</string>
    <string name="questionNumber">1</string>
    <string name="questiontext">Question #</string>


</resources>