<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_quiz_main">

    <TextView
        android:id="@+id/question"
        android:layout_width="294dp"
        android:layout_height="83dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/san_serif"
        android:text="@string/questionsText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonChoiceA"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="303dp"
        android:background="@drawable/option_a"
        android:fontFamily="@font/san_serif"
        android:text="@string/buttonA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonChoiceB"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="387dp"
        android:background="@drawable/option_b"
        android:fontFamily="@font/san_serif"
        android:text="@string/buttonB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonChoiceC"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="469dp"
        android:background="@drawable/option_c"
        android:fontFamily="@font/san_serif"
        android:text="@string/buttonC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonChoiceD"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="551dp"
        android:background="@drawable/option_d"
        android:fontFamily="@font/san_serif"
        android:text="@string/buttonD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="137dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/toporange" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:text="@string/score0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="312dp"
        android:text="@string/questionNumber"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="28dp"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="324dp"
        android:text="@string/questiontext"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sansserif_demibold"
        android:gravity="center"
        android:text="@string/literature"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>