<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_botany"
    android:background="@drawable/background">

    <Button
        android:id="@+id/gradeSchoolButton"
        android:layout_width="349dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="293dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bglevelbuttons"
        android:fontFamily="@font/san_serif"
        android:text="@string/grade_school"
        android:textColor="#514B4F"
        android:textSize="32sp" />

    <Button
        android:id="@+id/highSchoolButton"
        android:layout_width="349dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="410dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bglevelbuttons"
        android:fontFamily="@font/san_serif"
        android:text="@string/high_school"
        android:textColor="#514B4F"
        android:textSize="32sp" />

    <Button
        android:id="@+id/collegeButton"
        android:layout_width="349dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/bglevelbuttons"
        android:fontFamily="@font/san_serif"
        android:text="@string/college"
        android:textColor="#514B4F"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="137dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/toporange" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sansserif_demibold"
        android:gravity="center"
        android:text="@string/literature"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/san_serif"
        android:text="@string/select_level"
        android:textSize="35dp" />

</RelativeLayout>